feat: implement task list component with initial tasks and styling

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,4 @@
-<p-button label="Danger" severity="danger" />
-
-<lib-card></lib-card>
+<!-- <lib-card></lib-card> -->
 
 <div class="row">
   <div class="col-12 col-md-4">
