--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @use 'bootstrap/scss/bootstrap';
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  background-color: #f5f7fa;
+  margin: 0;
+}
