feat: implement dashboard feature with task management components

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,3 @@
-<!-- <lib-card></lib-card> -->
-
-<div class="row">
-  <div class="col-12 col-md-4">
-    <lib-list></lib-list>
-  </div>
-  <div class="col-12 col-md-4">
-    <lib-list></lib-list>
-  </div>
-  <div class="col-12 col-md-4">
-    <lib-list></lib-list>
-  </div>
-</div>
+<app-layout>
+  <router-outlet></router-outlet>
+</app-layout>
