--- a/src/app/features/dashboard/task-menubar/task-menubar.html
+++ b/src/app/features/dashboard/task-menubar/task-menubar.html
@@ -7,8 +7,9 @@
         </ng-template>
         <ng-template #end>
             <div class="actions d-flex gap-2">
-                <p-button label="Priority" variant="outlined" severity="secondary" />
-                <p-button icon="pi pi-plus" label="New Task" />
+                <p-button label="Priority" variant="outlined" class="action-button" severity="secondary"
+                    class="action-button" />
+                <p-button icon="pi pi-plus" label="New Task" class="action-button" />
             </div>
         </ng-template>
     </p-menubar>
