--- a/src/app/features/dashboard/statistics/statistics.html
+++ b/src/app/features/dashboard/statistics/statistics.html
@@ -1,11 +1,11 @@
 <div class="main-container">
-    @for (item of items; track $index) {
+    @for (item of statistics(); track item.id) {
     <p-card class="dashboard-card">
         <div class="card-content">
-            <h6 class="card-title">{{ item.title }}</h6>
-            <h3 class="card-count">{{ item.count }}</h3>
-            <p class="card-stats" [class]="item.classes">
-                {{ item.statics }}
+            <h6 class="card-title">{{item.icon + ' ' +item.title}}</h6>
+            <h3 class="card-count">{{ item.value }}</h3>
+            <p class="card-stats" [style]="{color: item.color}">
+                {{item.change | statisticsChangeLabel : item.changeLabel}}
             </p>
         </div>
     </p-card>
