feat: enhance task card and menubar styles with hover effects and improve layout padding

--- a/src/app/features/dashboard/task-card/task-card.html
+++ b/src/app/features/dashboard/task-card/task-card.html
@@ -1,4 +1,4 @@
-<div class="task-container" [ngClass]="{ 'high-priority-task': task().priority === 'high' }">
+<div class="task-container" [ngClass]="{'high-priority-task': task().priority === 'high' && task().isOverdue }">
     <div class="task-priority-tag">
         <span [ngClass]="priorityClass">{{task().priority
             | taskPriority}}</span>
