--- a/src/app/layout/toolbar/toolbar.html
+++ b/src/app/layout/toolbar/toolbar.html
@@ -7,7 +7,7 @@
             </div>
         </ng-template>
         <ng-template #center>
-            <input type="text" pInputText placeholder="🔍 Search tasks..." />
+            <input type="text" pInputText placeholder="🔍 Search tasks..." class="search-input" />
         </ng-template>
         <ng-template #end>
             <div class="toolbar-notifications">
