--- a/src/app/features/dashboard/task-card/task-card.scss
+++ b/src/app/features/dashboard/task-card/task-card.scss
@@ -4,6 +4,10 @@
   border-radius: 8px;
   border: 1px solid vars.$border-color;
   padding: 8px 16px;
+  &:not(.high-priority-task):hover {
+    border-top: 1px solid var(--color-azure-46, #1976d2);
+    box-shadow: 0px 8px 20px 0px #1976d240;
+  }
   .task-priority-tag {
     margin-bottom: 8px;
     span {
@@ -66,4 +70,9 @@
 .high-priority-task {
   border-left: 4px solid vars.$danger-border-color;
   background-color: vars.$danger-background-color;
+  &:hover {
+    border: 1px 1px 1px 4px;
+    border-color: vars.$danger-border-color;
+    box-shadow: 0px 8px 20px 0px #d32f2f4d;
+  }
 }
